--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,15 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: <p align="center"> Elavarasan R </p>
+logo: /assets/img/TNL21880527.jpg
+description:
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/elavarasan-r-a0910724/">LinkedIn</a> |
+  <a href="https://github.com/elavarasan45">GitHub</a>
+ 
+  <br>  
+  I'm working on iOS, Machine learning & NLP related problems.
+  <br>
+  </p>
 show_downloads: true
-google_analytics:
+
 theme: jekyll-theme-minimal
